--- a/index.css
+++ b/index.css
@@ -1,12 +1,13 @@
 /** @format */
 body {
-  margin: 0;
+  margin: 0 auto;
   padding: 20px;
   text-align: center;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background-color: rgb(1, 90, 1);
   font-size: 30px;
   color: rgb(255, 255, 255);
+  max-width: 700px;
 }
 
 .main {
@@ -28,7 +29,7 @@ header {
 .player {
   display: grid;
   grid-template-rows: repeat(3, 1fr);
-  margin-top: auto;
+  /* margin-top: auto; */
 }
 
 button {
