--- a/index.css
+++ b/index.css
@@ -44,7 +44,7 @@ button {
 }
 
 #replay {
-  background: rgb(1, 48, 1);
+  background: #013001;
   color: #fff;
   border: 3px solid #fff;
   padding: 5px;
@@ -62,4 +62,23 @@ button {
 .scores {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+}
+
+#rock:hover{
+    background-color:#013001;
+    color:#fff;
+    border: 3px solid #fff;
+    transition:all 500ms ease;
+}
+#scissors:hover{
+  background-color:#013001;
+  color:#fff;
+  border: 3px solid #fff;
+  transition:all 500ms ease;
+}
+#paper:hover{
+  background-color:#013001;
+  color:#fff;
+  border: 3px solid #fff;
+  transition:all 500ms ease;
 }
