--- a/index.css
+++ b/index.css
@@ -1,7 +1,6 @@
 /** @format */
 body {
-  margin: 0 auto;
-  padding: 20px;
+  height: 100vh;
   text-align: center;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background-color: rgb(1, 90, 1);
