--- a/index.css
+++ b/index.css
@@ -2,8 +2,7 @@
 body {
   height: 100vh;
   text-align: center;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: rgb(1, 90, 1);
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size: 30px;
   color: rgb(255, 255, 255);
   max-width: 700px;
