--- a/index.css
+++ b/index.css
@@ -4,8 +4,29 @@ body {
   text-align: center;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size: 30px;
-  color: rgb(255, 255, 255);
-  max-width: 700px;
+  color: #fff;
+  text-shadow: -1px 1px 2px #000, 1px 1px 2px #000;
+  background: linear-gradient(65deg, #ff3604, #f3cf06);
+}
+body::before{
+  content: "Rock Paper Scissors";
+  position:fixed;
+  left:0;
+  top:30%;
+  width:100%;
+  height:100%;
+  font-size:6rem;
+  font-weight: 900;
+  text-shadow: none;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke: 5px #000;
+  letter-spacing: 1rem;
+  filter: opacity(0.35);
+  text-transform: uppercase;
+  z-index: -1;
+}
+.content {
+  margin: 5rem 0;
 }
 
 .main {
