--- a/index.css
+++ b/index.css
@@ -30,6 +30,46 @@ body::before{
 }
 .main {
   margin: auto;
+  position:relative;
+}
+.play {
+  font-size: 9rem;
+  margin: 0 5rem;
+  border-radius: 2rem;
+  background: #333333c7;
+  box-shadow: 0px 10px 12px #000, 0px -2px 12px #000;
+}
+.render {
+  margin-top: 2rem;
+  width: 100%;
+  height: 20rem;
+  position:relative;
+}
+.render-lf{
+  position:absolute;
+  left:0;top:0;
+  width:30%;
+}
+.render-rg{
+  position:absolute;
+  right:0;top:0;
+  width: 30%;
+}
+.render h3 {
+  color: #333;
+}
+#result{
+  font-size: 4rem;
+  letter-spacing: 5px;
+}
+small {
+  font-size: 16px;
+  font-weight: 600;
+  color: #ccc;
+  text-shadow: -1px 1px 2px #000, 1px 1px 2px #000;
+  position: absolute;
+  transform: translate(-40%, 5%);
+  top: 100%;
 }
 
 header {
