--- a/index.css
+++ b/index.css
@@ -80,32 +80,23 @@ header {
   letter-spacing: 5px;
   border-radius: 20px;
   transition: all 1000ms;
-  border: 3px solid rgb(1, 48, 1)
+  background: #333;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  background-size: 200% 200%;
+  animation:leftright 20s infinite linear;
+  display: none;
 }
-
-.player {
-  display: grid;
-  grid-template-rows: repeat(3, 1fr);
-}
-
-button {
-  background-color: #fff;
-  border: 3px solid rgb(1, 48, 1);
-  font-size: 20px;
-  color: rgb(1, 90, 1);
-  padding: 2px 3px;
-  margin-top: 3px;
-  margin-bottom: 5px;
-  letter-spacing: 3px;
-  font-weight: bold;
-}
-
-#replay {
-  background: #013001;
-  color: #fff;
-  border: 3px solid #fff;
-  padding: 5px;
-  border-radius: 5px;
+@keyframes leftright {
+  0%{
+    background-position: 10% 0;
+  }
+  50%{
+    background-position: 100% 0;
+  }
+  100%{
+    background-position: 10% 0;
+  }
 }
 
 #reset {
