--- a/index.css
+++ b/index.css
@@ -100,10 +100,13 @@ header {
 }
 
 #reset {
-  border: 4px solid wheat;
-  border-radius: 50px;
-  background-color: rgba(255, 0, 0, 0.863);
-  padding: 10px;
+  background: #151515;
+  border: 1px solid #626261;
+  letter-spacing: 5px;
+  padding: 15px 30px;
+  border-radius: 10px;
+  font-size: 0.8rem;
+  font-weight: 900;
   color: #fff;
 }
 
