--- a/index.css
+++ b/index.css
@@ -108,6 +108,18 @@ header {
   font-size: 0.8rem;
   font-weight: 900;
   color: #fff;
+  box-shadow: 1px 1px 5px #000000, -1px -1px 5px #000000;
+  cursor: pointer;
+  text-transform: uppercase;
+}
+.reset-btn {
+  /* position:absolute;
+  left:0;
+  top:0; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
 }
 
 .scores {
