--- a/index.css
+++ b/index.css
@@ -121,27 +121,52 @@ header {
   align-items: center;
   margin-top: 1rem;
 }
-
 .scores {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
 }
-
-#rock:hover{
-    background-color:#013001;
+.player {
+  position:relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  max-width: 30%;
+  margin: 0 auto;
+}
+#count {
+  font-size: 7rem;
+  font-weight: 700;
+  text-shadow: -1px 1px 2px #000, 1px 1px 2px #000;
+}
+.player button {
+  background:transparent;
+  position: relative;
+  border: none;
+  box-sizing: border-box;
+  margin: 1rem;
+}
+.player button .emo{
+  font-size: 4.5rem;
+  font-weight: bold;
+  filter: grayscale(1) contrast(1);
+  text-shadow: -1px 7px 2px #000, 1px 1px 2px #000;
+}
+.player button:hover{
     color:#fff;
-    border: 3px solid #fff;
-    transition:all 500ms ease;
+    transition: 1s ease ;
+    animation: bounce 0.5s linear;
 }
-#scissors:hover{
-  background-color:#013001;
-  color:#fff;
-  border: 3px solid #fff;
-  transition:all 500ms ease;
+.player button:active .emo, 
+.player button:focus .emo{
+  filter: grayscale(0) contrast(3);
+  transform:translateY(-25%) rotate(30deg) scale(1.5);
+  transition: 1s ease;
 }
-#paper:hover{
-  background-color:#013001;
-  color:#fff;
-  border: 3px solid #fff;
-  transition:all 500ms ease;
+@keyframes bounce {
+  0%{transform: translateY(0%);}
+  25%{transform: translateY(-20%);}
+  50%{transform: translateY(0%);}
+  75%{transform: translateY(-10%);}
+  100%{transform: translateY(0%);}
 }
+
