--- a/index.css
+++ b/index.css
@@ -14,16 +14,16 @@ body::before{
   left:0;
   top:30%;
   width:100%;
-  height:100%;
   font-size:6rem;
   font-weight: 900;
   text-shadow: none;
   -webkit-text-fill-color: #565656;
   -webkit-text-stroke: 5px #000;
   letter-spacing: 1rem;
-  filter: opacity(0.8);
+  filter: opacity(0.4);
   text-transform: uppercase;
   z-index: -1;
+  overflow:hidden;
 }
 .content {
   margin: 0;
@@ -38,8 +38,10 @@ body::before{
   position:relative;
 }
 .play {
+  height: 13rem;
+  width: 18rem;
   font-size: 9rem;
-  margin: 0 5rem;
+  margin: 0 auto;
   border-radius: 2rem;
   background: #333333c7;
   box-shadow: 0px 10px 12px #000, 0px -2px 12px #000;
@@ -69,8 +71,24 @@ div#ties {
   color: #333;
 }
 #result{
+  
   font-size: 4rem;
   letter-spacing: 5px;
+  background: #5e3f28;
+    border-radius: 20px;
+    width:40%;
+    margin:0 auto;
+}
+p#game {
+  width: 20%;
+  position: absolute;
+  bottom: 0;
+  transform: translateX(50%);
+  margin: 1rem auto;
+  font-size: 2rem;
+  background: #5e3f28;
+  border-radius: 20px;
+  padding: 0.5rem;
 }
 small {
   font-size: 16px;
@@ -180,8 +198,7 @@ header {
   50%{transform: translateY(0%);}
   75%{transform: translateY(-10%);}
   100%{transform: translateY(0%);}
-}
-
+}  
 @media(max-width:1000px){
   .play{
     margin:0;
@@ -199,7 +216,7 @@ header {
   font-size:6rem;
 }
 .main {
-  margin: 1rem auto;
+  margin: 5rem auto;
   width: 70%;
 }
 #result{
@@ -213,6 +230,9 @@ header {
 }
 p#game {
   width: 20%;
+  position: absolute;
+  bottom: 0;
+  transform: translateX(180%);
   margin: 1rem auto;
   font-size: 2rem;
   background: #5e3f28;
@@ -220,6 +240,7 @@ p#game {
   padding: 0.5rem;
 }
 body::before {
-  top: 0 !important;;
+  top: 0;
+  filter: opacity(0.8);
 }
 }
