--- a/index.css
+++ b/index.css
@@ -7,6 +7,7 @@ body {
   color: #fff;
   text-shadow: -1px 1px 2px #000, 1px 1px 2px #000;
   background: linear-gradient(65deg, #ff3604, #f3cf06);
+  overflow:hidden;
 }
 body::before{
   content: "Rock Paper Scissors";
@@ -199,48 +200,3 @@ header {
   75%{transform: translateY(-10%);}
   100%{transform: translateY(0%);}
 }  
-@media(max-width:1000px){
-  .play{
-    margin:0;
-    height: 13rem;
-    width: 18rem;
-  }
-  .player{
-    width: 100%;
-    max-width:100%;
-  }
-.player button {
-  font-size:6rem;
-}
-.player button .emo {
-  font-size:6rem;
-}
-.main {
-  margin: 5rem auto;
-  width: 70%;
-}
-#result{
-  width: 60%;
-    margin: -6rem auto 3rem;
-    background: #333;
-    border-radius: 20px;
-}
-#count{
-  font-size:17rem;
-}
-p#game {
-  width: 20%;
-  position: absolute;
-  bottom: 0;
-  transform: translateX(180%);
-  margin: 1rem auto;
-  font-size: 2rem;
-  background: #5e3f28;
-  border-radius: 20px;
-  padding: 0.5rem;
-}
-body::before {
-  top: 0;
-  filter: opacity(0.8);
-}
-}
